--- a/.settings/org.eclipse.jst.j2ee.ejb.annotations.xdoclet.prefs
+++ b/.settings/org.eclipse.jst.j2ee.ejb.annotations.xdoclet.prefs
@@ -1,5 +1,5 @@
 XDOCLETBUILDERACTIVE=true
-XDOCLETHOME=D\:\\workspace\\eventcalendar\\
+XDOCLETHOME=D\:\\event-calendar.git\\trunk
 XDOCLETUSEGLOBAL=true
 XDOCLETVERSION=1.2.3
 eclipse.preferences.version=1
