--- a/pom.xml
+++ b/pom.xml
@@ -197,7 +197,23 @@
 			<version>1.9.15</version>
 		</dependency>
 		
-		<!-- JSON support -->			
+		<!-- JSON support -->	
+		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-core</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-annotations</artifactId>
+			<version>2.4.2</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.4.2</version>
+		</dependency>		
 		<dependency>
    			<groupId>com.google.code.gson</groupId>
     		<artifactId>gson</artifactId>
